<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FirstFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/log_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />

        <Button
            android:id="@+id/calm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/happy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/angry_button"
            app:layout_constraintStart_toEndOf="@+id/calm_button"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/angry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angry_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/tired_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tired_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calm_button" />

        <Button
            android:id="@+id/sad_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sad_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/anxious_button"
            app:layout_constraintStart_toEndOf="@+id/tired_button"
            app:layout_constraintTop_toBottomOf="@+id/happy_button" />

        <Button
            android:id="@+id/anxious_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anxious_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/angry_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>